# 202300733_LAB_P2_SO1_VacJun2026

./: .gitignore  README.md  worldcup.proto
docs/: Pruebas.md  manual_tecnico.md  prueba-1-replica.txt  prueba-2-replicas.txt
go-consumer/: Dockerfile  go.mod  go.sum
go-consumer/src/: main.go
go-deployment1/: Dockerfile  go.mod
go-deployment1/proto/: worldcup.pb.go  worldcup_grpc.pb.go
go-deployment1/src/: main.go
go-deployment1/src/client/: grpc_client.go
go-deployment2/: Dockerfile  go.mod  go.sum
go-deployment2/proto/: worldcup.pb.go  worldcup_grpc.pb.go
go-deployment2/src/: main.go
go-deployment2/src/rabbitmq/: writer.go
k8s/consumer/: deployment.yaml
k8s/gateway/: gateway.yaml  httproute.yaml
k8s/go-deployment1/: deployment.yaml  service.yaml
k8s/go-deployment2/: deployment.yaml  service.yaml
k8s/kubevirt/: services.yaml  vm-grafana.yaml  vm-valkey.yaml
k8s/rabbitmq/: deployment.yaml  service.yaml
k8s/rust-api/: deployment.yaml  hpa.yaml  service.yaml
k8s/zot-config/: containerd-config.yaml
locust/: locustfile.py
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
